修改英文文本错误